# LearnToSkip

./: .gitmodules  LICENSE  README.md  main.py  pyproject.toml
benchmark_cpp/: benchmark.cpp  benchmark_realistic.cpp
results/: alpha_pruning_results.json  combined_baseline_results.json  deep1m_results.json  efc_stacking_results.json  fallback_connectivity_adaptive.json  gist1m_results.json  heuristic_baselines_multithread.json  sift1m_results.json  visited_grid_glove.json  x86_c5_colocation_results.json  x86_simd_colocation_results.json
results/ablation/: table5.csv
results/adaptive/: fig7_data.csv  table7_joint.csv
results/build_speed/: raw.csv  table2.csv
results/classifier/: roc_data.json  table4.csv
results/cpp_e2e_benchmark/: cpp_e2e_detailed.csv  cpp_e2e_results.csv
results/generalization/: table6_transfer.csv
results/meta/: run_log.json
results/motivation/: fig1_data.csv
results/online_training/: online_training.csv
results/recall/: pareto_data.csv  raw.csv  table3.csv
results/scalability/: fig6_data.csv
results/threshold/: fig5_data.csv
results/universal_classifier/: universal_classifier.csv
src/learn_to_skip/: config.py  pipeline.py
src/learn_to_skip/adaptive/: thompson.py
src/learn_to_skip/builders/: __init__.py  base.py  cpp_learned_skip.py  distance_threshold.py  learned_skip.py  random_skip.py  vanilla.py
src/learn_to_skip/classifiers/: __init__.py  base.py  logistic.py  svm.py  threshold.py  tree.py  (+1 more)
tests/: test_builders.py  test_classifiers.py  test_datasets.py  test_experiments.py  test_features.py  test_tracer.py
(+36 files in other folders)
